<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragmentcinco"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:id="@+id/li1"
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:orientation="horizontal"
        tools:ignore="ContentDescription">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="145dp"
            android:src="@drawable/abac"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Abac"
                android:textSize="25sp"/>

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurantabac"
                android:textSize="11sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telefonabac"
                android:textSize="11sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/webabac"
                android:textSize="11sp"
                />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/li2"
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:orientation="horizontal"
        tools:ignore="ContentDescription">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:src="@drawable/amazonico"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amazonico_madrid"
                android:textSize="25sp"
                />
            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurantamazonico"
                android:textSize="11sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telefonamazonic"
                android:textSize="11sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restauranteamazonico.com"
                android:textSize="11sp"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/li3"
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:orientation="horizontal"
        tools:ignore="ContentDescription">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="130dp"
            android:src="@drawable/mcdo"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mcdonald_s_granollers"
                android:textSize="25sp"
                />
            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mcdocarrer"
                android:textSize="11sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telefonmcdo"
                android:textSize="11sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mcdonalds_com"
                android:textSize="11sp"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/li4"
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:orientation="horizontal"
        tools:ignore="ContentDescription">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:src="@drawable/lasalita"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/la_salita_valencia"
                android:textSize="25sp"
                />
            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_carrer_de_pere_iii_el_gran_11"
                android:textSize="11sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tlfnlasalita"
                android:textSize="11sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lasalitacovermanager_com"
                android:textSize="11sp"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/li5"
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:orientation="horizontal"
        tools:ignore="ContentDescription">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:src="@drawable/burgerking"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/burger_king_granollers"
                android:textSize="25sp"
                />
            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_comida_rapida_carrer_matagalls_s_n"
                android:textSize="11sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tlfnburger"
                android:textSize="11sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/burgerking_com"
                android:textSize="11sp"
                />
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
</FrameLayout>