<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_movies"
    android:orientation="vertical">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="menú"
        android:onClick="onclick"
        tools:ignore="OnClick,UsingOnClickInXml"
        android:contentDescription="@string/todo"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:id="@+id/peli1"
        android:layout_width="match_parent"
        android:layout_height="245dp"
        android:orientation="horizontal"
        tools:ignore="ContentDescription">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="245dp"
            android:src="@drawable/elllamadosalvaje"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/el_llamado_salvaje"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc_llamadosalvaje"
                android:textSize="11sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/infoelllamado"
                android:textSize="11sp"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/peli2"
        android:layout_width="match_parent"
        android:layout_height="245dp"
        android:orientation="horizontal"
        tools:ignore="ContentDescription">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="245dp"
            android:src="@drawable/hereditary"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hereditario"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc_llamadosalvaje"
                android:textSize="11sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_hereditario"
                android:textSize="11sp"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/peli3"
        android:layout_width="match_parent"
        android:layout_height="245dp"
        android:orientation="horizontal"
        tools:ignore="ContentDescription">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="245dp"
            android:src="@drawable/raya"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/raya_y_el_ltimo_drag_n"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc_raya"
                android:textSize="11sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_raya"
                android:textSize="11sp"/>
        </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    </ScrollView>

</LinearLayout>